--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 node_modules
 build
 .sass-cache
-app/public/css/main.css
-app/public/css/main.css.map
+./public/css/main.css
+./public/css/main.css.map
