add npm build scripts

--- a/package.json
+++ b/package.json
@@ -39,5 +39,10 @@
     "watch": "^0.13.0",
     "webpack": "^1.4.13",
     "webpack-dev-server": "^1.6.6"
+  },
+  "scripts": {
+    "postinstall": "npm run build",
+    "build": "gulp build",
+    "start": "node ./build/app.js"
   }
 }
