--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cookie-parser": "^1.3.3",
     "debug": "^2.1.0",
     "express": "^4.10.2",
+    "fibers": "git://github.com/eiriklv/node-fibers",
     "morgan": "^1.5.0",
     "node-jsx": "^0.12.4",
     "react": "^0.12.1",
