--- a/package.json
+++ b/package.json
@@ -7,17 +7,21 @@
   "license": "MIT",
   "main": "server.js",
   "dependencies": {
+    "async": "^0.9.0",
+    "bluebird": "^2.9.11",
     "body-parser": "^1.9.2",
+    "chokidar": "^1.0.0-rc3",
     "cookie-parser": "^1.3.3",
     "debug": "^2.1.0",
     "express": "^4.10.2",
     "fibers": "git://github.com/eiriklv/node-fibers",
+    "livereload": "^0.3.6",
     "morgan": "^1.5.0",
     "node-jsx": "^0.12.4",
     "react": "^0.12.1",
     "react-async": "^2.0.1",
     "react-document-title": "^0.1.3",
-    "react-router": "^0.11.4"
+    "react-router": "^0.12.0"
   },
   "devDependencies": {
     "fs-extra": "^0.12.0",
