--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "async": "^0.9.0",
     "bluebird": "^2.9.11",
     "body-parser": "^1.9.2",
+    "brfs": "^1.3.0",
     "chokidar": "^1.0.0-rc3",
     "cookie-parser": "^1.3.3",
     "debug": "^2.1.0",
@@ -21,7 +22,8 @@
     "react": "^0.12.1",
     "react-async": "^2.0.1",
     "react-document-title": "^0.1.3",
-    "react-router": "^0.12.0"
+    "react-router": "^0.12.0",
+    "transform-loader": "^0.2.1"
   },
   "devDependencies": {
     "fs-extra": "^0.12.0",
