--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "main": "server.js",
   "dependencies": {
     "async": "^0.9.0",
+    "babel-core": "^4.3.0",
+    "babel-loader": "^4.0.0",
     "bluebird": "^2.9.11",
     "body-parser": "^1.9.2",
     "brfs": "^1.3.0",
