--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "livereload": "^0.3.6",
     "morgan": "^1.5.0",
     "node-jsx": "^0.12.4",
+    "object-assign": "^2.0.0",
     "react": "^0.12.1",
     "react-async": "^2.0.1",
     "react-document-title": "^0.1.3",
