--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "chokidar": "^1.0.0-rc3",
     "cookie-parser": "^1.3.3",
     "debug": "^2.1.0",
+    "eventemitter3": "^0.1.6",
     "express": "^4.10.2",
     "fibers": "git://github.com/eiriklv/node-fibers",
     "livereload": "^0.3.6",
