--- a/package.json
+++ b/package.json
@@ -18,18 +18,18 @@
     "debug": "^2.1.0",
     "eventemitter3": "^0.1.6",
     "express": "^4.10.2",
-    "fibers": "git://github.com/eiriklv/node-fibers",
-    "livereload": "^0.3.6",
     "morgan": "^1.5.0",
     "node-jsx": "^0.12.4",
     "object-assign": "^2.0.0",
     "react": "^0.12.1",
-    "react-async": "^2.0.1",
     "react-document-title": "^0.1.3",
     "react-router": "^0.12.0",
+    "superagent": "^0.21.0",
     "transform-loader": "^0.2.1"
   },
   "devDependencies": {
+    "envify": "^1.2.1",
+    "envify-loader": "^0.1.0",
     "fs-extra": "^0.12.0",
     "gulp": "^3.8.10",
     "gulp-autoprefixer": "^2.0.0",
