--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "object-assign": "^2.0.0",
     "react": "^0.12.1",
     "react-document-title": "^0.1.3",
-    "react-router": "^0.12.0",
+    "react-router": "bobpace/react-router#transitionContext",
     "superagent": "^0.21.0",
     "transform-loader": "^0.2.1"
   },
