--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "debug": "^2.1.0",
     "eventemitter3": "^0.1.6",
     "express": "^4.10.2",
+    "fluxomorph": "git://github.com/eiriklv/fluxomorph",
     "morgan": "^1.5.0",
     "node-jsx": "^0.12.4",
     "object-assign": "^2.0.0",
