--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eventemitter3": "^0.1.6",
     "express": "^4.10.2",
     "fluxomorph": "git://github.com/eiriklv/fluxomorph",
+    "mongoose": "^3.8.24",
     "morgan": "^1.5.0",
     "node-jsx": "^0.12.4",
     "object-assign": "^2.0.0",
