--- a/package.json
+++ b/package.json
@@ -14,15 +14,19 @@
     "body-parser": "^1.9.2",
     "brfs": "^1.3.0",
     "chokidar": "^1.0.0-rc3",
+    "convict": "^0.6.1",
     "cookie-parser": "^1.3.3",
     "debug": "^2.1.0",
     "eventemitter3": "^0.1.6",
     "express": "^4.10.2",
+    "express-session": "^1.10.3",
     "fluxomorph": "git://github.com/eiriklv/fluxomorph",
     "mongoose": "^3.8.24",
     "morgan": "^1.5.0",
     "node-jsx": "^0.12.4",
     "object-assign": "^2.0.0",
+    "passport": "^0.2.1",
+    "passport-local": "^1.0.0",
     "react": "^0.12.1",
     "react-document-title": "^0.1.3",
     "react-router": "bobpace/react-router#transitionContext",
