--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.9.2",
     "brfs": "^1.3.0",
     "chokidar": "^1.0.0-rc3",
+    "connect-redis": "^2.2.0",
     "convict": "^0.6.1",
     "cookie-parser": "^1.3.3",
     "debug": "^2.1.0",
