--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "async": "^0.9.0",
     "babel-core": "^4.3.0",
     "babel-loader": "^4.0.0",
+    "bcryptjs": "^2.1.0",
     "bluebird": "^2.9.11",
     "body-parser": "^1.9.2",
     "brfs": "^1.3.0",
