--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.10.2",
     "express-session": "^1.10.3",
     "fluxomorph": "git://github.com/eiriklv/fluxomorph",
+    "method-override": "^2.3.1",
     "mongoose": "^3.8.24",
     "morgan": "^1.5.0",
     "node-jsx": "^0.12.4",
@@ -30,6 +31,7 @@
     "object-assign": "^2.0.0",
     "passport": "^0.2.1",
     "passport-local": "^1.0.0",
+    "qs": "^2.3.3",
     "react": "^0.12.1",
     "react-document-title": "^0.1.3",
     "react-router": "bobpace/react-router#transitionContext",
